# ecommerce-churn-predictor

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
api/: add_new_customer.py  app.py  seed_db.py
api/static/: style.css
api/templates/: index.html
notebooks/: 01_eda_and_cleaning.ipynb  02_preprocessing_and_baseline.ipynb  03_ensembling_and_tuning.ipynb
